--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -312,3 +312,8 @@ img::-moz-selection {
 body {
   webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
 }
+/*denzalovera.github.io*/
+.skill_set{
+    font-size: 18px;
+    color: #595959;
+}
