--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -220,11 +220,11 @@ a:focus {
 .content-section {
   padding-top: 100px;
 }
-.download-section {
+.skills-section {
   width: 100%;
   padding: 50px 0;
   color: white;
-  background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
+  background: url(../images/skillset-bg.png) no-repeat center center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
