--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -231,6 +231,20 @@ a:focus {
   background-size: cover;
   -o-background-size: cover;
 }
+
+.contact-section {
+  width: 100%;
+  padding: 50px 0;
+  color: white;
+  background: url(../images/contact-bg.png) no-repeat center center scroll;
+  background-color: black;
+  background-color: black;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+}
+
 #map {
   width: 100%;
   height: 200px;
