--- a/assets/css/ie9.css
+++ b/assets/css/ie9.css
@@ -3,19 +3,16 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
-
 /* Button */
-
-	input[type="button"],
-	input[type="submit"],
-	input[type="reset"],
-	button,
-	.button {
-		background-image: url("images/ie/grad0-20.svg");
-	}
+input[type="button"],
+input[type="submit"],
+input[type="reset"],
+button,
+.button {
+  background-image: url("images/ie/grad0-20.svg"); }
 
 /* List */
+ul.social li a:before {
+  background-image: url("images/ie/grad0-20.svg"); }
 
-	ul.social li a:before {
-		background-image: url("images/ie/grad0-20.svg");
-	}
+/*# sourceMappingURL=ie9.css.map */
